# spiderfootPY3

./: pyproject.toml  requirements.txt  sfcli.py
spiderfoot/static/css/: dark.css  spiderfoot.css
spiderfoot/static/js/: spiderfoot.js
spiderfoot/templates/: FOOTER.tmpl  HEADER.tmpl  newscan.tmpl
